# solar_travel_calculator

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
configs/bodies/: callisto.toml  ceres.toml  charon.toml  earth.toml  enceladus.toml  eris.toml  europa.toml  ganymede.toml  haumea.toml  io.toml  jupiter.toml  makemake.toml  mars.toml  mercury.toml  moon.toml  neptune.toml  pallas.toml  pluto.toml  saturn.toml  titan.toml  triton.toml  uranus.toml  venus.toml  vesta.toml
configs/vehicles/: chemical_upper_stage.toml  epstein_torch_drive.toml  ion_tug_mk1.toml  starship_v4_concept.toml
crates/aerobrake/: Cargo.toml
crates/aerobrake/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/config/: Cargo.toml  README.md
crates/config/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/ephem_spice/: Cargo.toml  README.md
crates/ephem_spice/src/: kernels.rs  lib.rs
crates/export/: Cargo.toml  README.md
crates/export/src/: lib.rs
crates/importer/: Cargo.toml
crates/importer/src/: lib.rs
crates/impulsive/: Cargo.toml  README.md
crates/impulsive/src/: lib.rs  transfers.rs
crates/lowthrust/: Cargo.toml  README.md
crates/lowthrust/src/: lib.rs
crates/orbits/: Cargo.toml  README.md
crates/orbits/src/: lib.rs
crates/propulsion/: Cargo.toml  README.md
crates/propulsion/src/: lib.rs
crates/transfer/: Cargo.toml  README.md
crates/transfer/src/: facade.rs  lib.rs
crates/transfer/src/mission/: arrival.rs  departure.rs  interplanetary.rs  mod.rs  porkchop.rs
crates/transfer/src/mission/interplanetary/: continuous.rs
data/reference/: horizons_earth_mars_2026.csv
data/scenarios/: planets.yaml  vehicles.yaml
data/windows/: earth_barycenter__mars_barycenter__et839505669.json  earth_barycenter__mars_barycenter__et846417669.json  earth_barycenter__mars_barycenter__et846676869.json
docs/: LICENSING.md  core_logic.md  milestones.md  spec.md
src/: lib.rs  main.rs
src/dynamics/: lambert.rs
src/ephemeris/: kernels.rs  mod.rs
src/mission/: arrival.rs  departure.rs  interplanetary.rs  mod.rs  propulsion.rs
src/mission/interplanetary/: continuous.rs
src/scenario/: mod.rs
tests/: ephemeris.rs  impulsive.rs  integration_milestones.rs  lambert.rs  lambert_regression.rs  mission.rs  normalize.rs  phases.rs  porkchop_plot.rs  scenario.rs
tools/: earth_mars_distance.py  porkchop_plot.py
