[package]
name = "solar_travel_calculator"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
readme = "README.md"

[dependencies]
cspice-sys = { version = "1.0.4", features = ["downloadcspice"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
thiserror = "2.0"

[patch.crates-io]
cspice-sys = { path = "vendor/cspice-sys" }
