[package]
name = "solar_importer"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
description = "SPICE kernel import utilities"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
thiserror = "2.0"
solar_ephem_spice = { path = "../ephem_spice" }
